# respondent-resolve

./: .deepsource.toml  .gitignore  NOTES.md  README.md  run_client.sh  run_server.sh  setup.cfg  setup.py
.github/workflows/: main.yml
docs/: DEVNOTES.md
src/cro/respondent/resolve/: __main__.py  api.py  client.py  domain.py  respondent.py  server.py  service.py
src/cro/respondent/resolve/templates/: files_select.html
src/cro_respondent_resolve.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
templates/: persons_table.html
tests/: test_api.py
