[metadata]
name = cro_respondent_resolve
version = attr: 0.0.1
description = Respondent matching and resolving existing entries.
long_description = file: README.md
keywords = respondent, resolve
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir=
    =src
install_requires =
    pandas
    flask
    flask_restful
    importlib-metadata; python_version<"3.8"

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    executable-name = cro_respondent_resolve

[options.extras_require]
rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
where=src
exclude =
    docs*
    tests*
